--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Run lint
       run: |
         cargo fmt --all -- --check
-        cargo clippy --all-targets --all-features -- -D warnings
+        cargo clippy --all-targets --all-features
     
     - name: Run unit tests
       run: cargo test --lib --verbose
